--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-03" />
-        <meta property="og:article:modified_time" content="2019-11-03" />
+        <meta property="og:article:modified_time" content="2019-11-19" />
 <meta property="og:title" content="Как выбрать брокера" />
 <meta property="og:url" content="https://onfin.github.io/literacy/brokers" />
 
@@ -89,12 +89,12 @@
 <h2 id="_2">Основые виды комиссий брокеров</h2>
 <ul>
 <li>Комиссия от суммы сделки (оборота). Обычное значение — 0,05% т.е купить или продать ценных бумаг на 100Кр стоит 50р.</li>
-<li>Минимальная комиссия за сделку. Если она есть, то около 100р. Это много. Минимально диверсифицированный портфель ценных бумаг это 20–30 наименований т.е. почти каждое относительно крупное довнесение денег на счёт будет обходиться в 2–3 тысячи рублей.</li>
+<li>Минимальная комиссия за сделку. Если она есть, то около 100р. Это много. Минимально диверсифицированный портфель ценных бумаг это 20–30 наименований т.е. почти каждое относительно крупное довнесение денег на счёт будет обходиться в 2–3 тысячи рублей. Выбирайте брокера, где её нет.</li>
 <li>Ежемесячная комиссия. Если есть, то около 200р. Бывает в трёх формах: фиксированная абонентская плата, минимальная комиссия (уменьшается на сумму прочих комиссий), комиссия за учёт сделок (т.е. взимается только за тот месяц, в который вы совершали сделки). Вроде бы мелочь, но очень неприятна когда предполагается пополнять и/или ребалансировать портфель ежемесячно.</li>
 <li>Комиссия за хранение ценных бумаг. Если есть — порядка 0,01%г (или 80коп/мес за каждые 100Кр среднемесячной стоимости активов). Это компенсация <a href="https://www.nsd.ru/ru/fees/general/">комиссии Национального Расчётного Депозитария</a>. Если брокер её не взимает — значит 100% даёт ваши бумаги в долг (в РЕПО).</li>
 <li>Комиссия за участие в корпоративных действиях. Это если вы хотите принять участие в оферте по облигациям, выкупе или размещении акций компанией. Обычно порядка 1000р за заявку. Нужда в этом возникает крайне редко.</li>
 <li>Комиссия за зачисление дивидендов. Есть у <a href="https://zaoik.finam.ru/depo/tariffs">депозитария Финама</a> — 1,18% от суммы дивидендов (и если не знаешь что и где искать — не найдёшь). У приличных брокеров — бесплатно на брокерский, а вот перечисление на банковский счёт может быть платным.</li>
-<li>Комиссия за зачисление и отправку ценных бумаг. Обычно порядка 300р за одно наименование.</li>
+<li>Комиссия за зачисление и отправку ценных бумаг по неторговым поручениям. Обычно порядка 300р за одно наименование.</li>
 </ul>
 <h2 id="_3">Критерии выбора брокера</h2>
 <ol>
