--- a/literacy/howto.html
+++ b/literacy/howto.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-08-18" />
-        <meta property="og:article:modified_time" content="2019-10-16" />
+        <meta property="og:article:modified_time" content="2019-11-19" />
 <meta property="og:title" content="Пенсия своими силами. Пошаговое руководство" />
 <meta property="og:url" content="https://onfin.github.io/literacy/howto" />
 
@@ -58,7 +58,7 @@
             <h1>Пенсия своими силами. Пошаговое руководство</h1>
             <div class="meta">
                     <p class="description">Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции.</p>
-                        <p> Обновлено: <time>2019-10-16</time> </p>
+                        <p> Обновлено: <time>2019-11-19</time> </p>
             </div>
         </header>
 
@@ -112,9 +112,9 @@ calcRetirement();
 </li>
 <li>
 <p>После того, как с откладыванием 20% вы освоились, каждый месяц повышаем планку, минимум на 1%. Тяжко? Выбиваем повышение з/п, ищем другую работу, ищем подработки, но планку — повышаем, регулярно. Пока не будет 50%, а лучше — больше. Вот калькулятор, найдите своё значение: пусть накоплено
-<input id="ret-capital" type="number" value=12 step=1 style="width: 3em;" onChange="calcRetirement()" /> месячных доходов,
+<input id="ret-capital" type="number" value=12 step=1 style="width: 3.5em;" onChange="calcRetirement()" /> месячных доходов,
 а сберегается
-<input id="ret-contr" type="number" value=20 step=1 style="width: 2em;" onChange="calcRetirement()" />%,
+<input id="ret-contr" type="number" value=20 step=1 style="width: 3em;" onChange="calcRetirement()" />%,
 тогда пассивный доход обеспечит вам текущий уровень потребления через
 <b><span id="ret-period">28.41</span></b> лет.</p>
 <p>Если в конце месяца остались свободные деньги — их также отправляем в сбережения.</p>
@@ -224,10 +224,7 @@ calcRetirement();
 <p>Для доступа на фондовый рынок нужно открыть специальные счёта — брокерский, через который продаются/покупаются ценные бумаги, и депозитарный — на котором лежат купленные ценные бумаги (открывается вместе с брокерским).</p>
 </li>
 <li>
-<p>Сводная таблица по брокерам</p>
-<p><div id="myExcelDiv" style="width: 700px; height: 448px"></div>
-<script async defer type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21118&authkey=%21ANFN9mvZ5-UURWg&em=3&wdItem=%22'Sheet1'!A1%3AH8%22&wdDivId=%22myExcelDiv%22&wdHideGridlines=1&wdAllowInteractivity=0"></script></p>
-<p>Конечно, брокеров больше, но эти, в моём понимании, лучше других подходят под задачи обычного человека.</p>
+<p><a href="/literacy/brokers">Про выбор брокера и их тарифы.</a></p>
 </li>
 <li>
 <p>Будут звонить/писать и постоянно предлагать консультирование, аналитику, торговые идеи, семинары, и прочее. Не слушайте и не соглашайтесь.</p>
@@ -245,7 +242,7 @@ calcRetirement();
 <p>Облигации удобно выбирать здесь: <a href="https://smart-lab.ru/q/ofz/.">https://smart-lab.ru/q/ofz/.</a> Тип ОФЗ указываем «постоянный доход», сортируем по дате погашения, выбираем те, которые погашаются непосредственно перед целевой датой. Лучше всего держать облигации до самого погашения: так мы не несём риски колебаний их стоимости и вкладываем деньги под зафиксированную на момент покупки облигаций рыночную доходность (смотрим первую колонку с доходностью, «доходность облигации к погашению при текущей рыночной цене»).</p>
 </li>
 <li>
-<p>Выплата по облигациям с переменным купоном (ПК) пересчитывается каждый раз исходя из средней рыночной доходности за предыдущий период. Эти облигации хороши тем, что их стоимость колеблется не так сильно, как у облигаций с фиксированным купоном, и вы всегда получаете рыночную доходность на свои вложения (хотя и с задержкой; из-за этого отображаемая в таблицах доходность по этим облигациям некорректна т.к. вычисляется будто купон постоянный). Так как ставки у нас имеют тенденцию снижаться, лучше выбирать облигации с постоянным купоном, а переменный брать только если вы предполагаете возможность продажи облигаций раньше их погашения из-за перемены своих планов или чрезвычайных обстоятельств.</p>
+<p>Выплата по облигациям с переменным купоном (ПК) пересчитывается каждый раз исходя из средней рыночной доходности за предыдущий период. Эти облигации хороши тем, что их стоимость колеблется не так сильно, как у облигаций с фиксированным купоном, и вы всегда получаете рыночную доходность на свои вложения (хотя и с задержкой; из-за этого отображаемая в таблицах доходность по этим облигациям некорректна т.к. вычисляется будто купон постоянный). Так как ставки у нас имеют тенденцию снижаться, лучше выбирать облигации с постоянным купоном — получите дополнительную доходность от роста стоимости облигации, если придётся её продать сильно раньше погашения. Облигации с переменным купоном — для сбережений на неопределённый (но ограниченный) срок, когда хочется обезопасить себя от риска роста ставок на этом сроке. Ну или если ставки уже начали расти.</p>
 </li>
 <li>
 <p>Облигации с индексируемым номиналом (ИН) — самый интересный инструмент сбережений на финансовые цели с неопределённым сроком. Вместо подстройки доходности под рыночные условия у них увеличивается номинал пропорционально увеличению индекса потребительских цен, и одновременно, растёт купонная выплата (2,5%г от номинала).
@@ -255,7 +252,7 @@ calcRetirement();
 <p>На все купонные выплаты покупаем облигации того же выпуска.</p>
 </li>
 <li>
-<p>Основное же назначение фондового рынка: приобретение долей в крупном бизнесе — акций. Крупные (а иногда и не очень крупные) предприятия для привлечения денег на развитие выпускают и продают акции. Каждая акция представляет собой право на долю в бизнесе и долю в его прибыли. Крупный бизнес, даже если не развивается, живёт как правило долго, а его выручка (а, следовательно, и распределяемая в пользу акционеров прибыль) изменяется вслед за инфляцией, валютными курсами или другими экономическими параметрами в зависимости от специфики самого бизнеса. Это позволяет собирать из акций <em>инвестиционные портфели</em>, которые защищают инвестора от наиболее чувствительных для него рисков. Среднеисторическая доходность акций — инфляция + 5%г.</p>
+<p>Основное же назначение фондового рынка — приобретение долей в крупном бизнесе: акций. Крупные (а иногда и не очень крупные) предприятия для привлечения денег на развитие выпускают и продают акции. Каждая акция представляет собой право на долю в бизнесе и долю в его прибыли. Крупный бизнес, даже если не развивается, живёт как правило долго, а его выручка (а, следовательно, и распределяемая в пользу акционеров прибыль) изменяется вслед за инфляцией, валютными курсами или другими экономическими параметрами в зависимости от специфики самого бизнеса. Это позволяет собирать из акций <em>инвестиционные портфели</em>, которые защищают инвестора от наиболее чувствительных для него рисков. Среднеисторическая доходность акций — инфляция + 5%г.</p>
 </li>
 <li>
 <p>Рынок акций даже в целом крайне чувствителен и к макроэкономическим параметрам, и к настроениям инвесторов: все акции почти разом могут как очень сильно дорожать (так что купленные в это время акции не принесут инвесторам никакой доходности, т.к. доходность это прибыль на долю в компании, разделённая на стоимость покупки этой доли), так и очень сильно дешеветь (на время, иногда очень длительное, лишая инвесторов капитала, вложенного в эти акции до их падения). В случае отдельных акций ситуация ещё более нестабильная. И предсказанию эти движения не поддаются, уже немало инвестиционных фондов (даже под руководством нобелевских лауреатов и с сотнями профессиональных аналитиков) разорились на попытках это делать. Поэтому: (а) в акции вкладываются только те деньги, которые уже никогда не понадобятся сами по себе; (б) акции приобретаются только широко диверсифицированным портфелем т.е. нескольких десятков компаний из разных сфер; (в) делается это без попыток угадывания момента: или через заранее определённые интервалы времени, или при накоплении достаточной суммы лишних денег.</p>
