--- a/notes/index.html
+++ b/notes/index.html
@@ -67,6 +67,7 @@
 <li><a href="/notes/capital">Зачем нужен капитал</a></li>
 <li><a href="/notes/recklessness">Безответственное отношение к деньгам</a></li>
 <li><a href="/notes/finplan">Личный финансовый план — не нужен</a></li>
+<li><a href="/notes/lifeprofile">Финансовый профиль жизни обычного человека и инвестора</a></li>
 </ol>
 <h2 id="_2">Фондовый рынок</h2>
 <ol>
