--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -107,7 +107,7 @@
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/notes/marketprice"> Откуда берётся рыночная цена и доходность акций &gt;&gt; </a>
+                <a href="/notes/lifeprofile"> Финансовый профиль жизни обычного человека и инвестора &gt;&gt; </a>
     </div>
     </div>
 </div>
