--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -115,7 +115,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
-                <a href="/notes/finplan"> &lt;&lt; Личный финансовый план — не нужен </a>
+                <a href="/notes/lifeprofile"> &lt;&lt; Финансовый профиль жизни обычного человека и инвестора </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
