--- a/notes/lifeprofile.html
+++ b/notes/lifeprofile.html
@@ -245,6 +245,12 @@
                             labelString: "Капитал, Мр"
                         }
                     }],
+                    xAxes: [{
+                        scaleLabel: {
+                            display: true,
+                            labelString: "Годы"
+                        }
+                    }]
                 }
             }
         });
