--- a/notes/lifeprofile.html
+++ b/notes/lifeprofile.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-21" />
-        <meta property="og:article:modified_time" content="2019-11-21" />
+        <meta property="og:article:modified_time" content="2019-11-22" />
 <meta property="og:title" content="Финансовый профиль жизни обычного человека и инвестора" />
 <meta property="og:url" content="https://onfin.github.io/notes/lifeprofile" />
 
@@ -72,7 +72,9 @@
 
 <div id="lifeProfile" class="calc-form"></div>
 
-<canvas id="canvas"></canvas>
+<div style="min-height: 256px">
+    <canvas id="canvas"></canvas>
+</div>
 
 <script type="text/javascript">
   makeForm(lifeProfile, {
@@ -140,7 +142,8 @@
       title: "Доходность сбережений, %г",
       type: "number",
       step: 1,
-      default: 5
+      default: 5,
+      max: 5
     },
     spent_o: {
         title: "Потратил за жизнь обычный человек, Мр",
@@ -224,6 +227,10 @@
             options: {
                 responsive: true,
                 hoverMode: 'index',
+                maintainAspectRatio: false,
+                onResize: function(chart, size) {
+                    chart.canvas.parentNode.style.height = Math.max(size.height, 256) + 'px';
+                },
                 stacked: false,
                 scales: {
                     yAxes: [{
