--- a/calculators/index.html
+++ b/calculators/index.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-11-23" />
 <meta property="og:title" content="Калькуляторы" />
 <meta property="og:url" content="https://onfin.github.io/calculators" />
 
@@ -82,6 +82,7 @@
 <li>Капитал и доходность на периодические вложения</li>
 <li>Требуемые ежемесячные сбережения для заданного пассивного дохода</li>
 <li><strong>Срок достижения финансовой независимости</strong></li>
+<li><strong>Финансовый профиль жизни обычного человека и инвестора</strong></li>
 </ul>
 </li>
 </ol>
