--- a/notes/index.html
+++ b/notes/index.html
@@ -73,7 +73,12 @@
 <ol>
 <li><a href="/notes/marketprice">Откуда берётся рыночная цена и доходность акций</a></li>
 </ol>
-<h2 id="_3">Обо мне</h2>
+<h2 id="_3">Экономические этюды</h2>
+<ol>
+<li><a href="/notes/fairprice">Справедливая цена</a></li>
+<li><a href="/notes/workersfactories">Фабрики — рабочим</a></li>
+</ol>
+<h2 id="_4">Обо мне</h2>
 <ol>
 <li><a href="/notes/aboutme">Кто я и как дошёл до жизни такой</a></li>
 <li><a href="/notes/system">Как организованы мои финансы</a></li>
