--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -121,7 +121,7 @@
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a>
+                <a href="/notes/fairprice"> Справедливая цена &gt;&gt; </a>
     </div>
     </div>
 </div>
