--- a/literacy/index.html
+++ b/literacy/index.html
@@ -67,6 +67,7 @@
 <li><a href="/literacy/intro">Введение</a></li>
 <li><a href="/literacy/notaboutmoney">Бережливость — это не про деньги</a></li>
 <li><a href="/literacy/reserves">Формирование резервов</a></li>
+<li><a href="/literacy/stocks">Акции и их смысл</a></li>
 </ol>
 <h2 id="_2">Практика</h2>
 <ol>
