--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -134,7 +134,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a>
+                <a href="/literacy/stocks"> Акции и их смысл &gt;&gt; </a>
     </div>
     </div>
 </div>
