--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-11" />
-        <meta property="og:article:modified_time" content="2019-11-11" />
+        <meta property="og:article:modified_time" content="2019-11-27" />
 <meta property="og:title" content="Мой портфель ценных бумаг и стратегия использования брокерских счетов" />
 <meta property="og:url" content="https://onfin.github.io/notes/myportfolio" />
 
@@ -79,9 +79,9 @@
 <h2 id="_1">Основополагающие принципы</h2>
 <ol>
 <li>Желающие «заработать на акциях» благоволят сразу пройти в казино — там вероятность «заработка» выше.</li>
-<li>Бо́льшую часть времени бо́́льшая часть компаний на рынке оценена справедливо. Т.е. ожидаемая долгосрочная доходность по всем бумагам, с поправкой на риск, одинакова (про размер доходности будет отдельная статья, это интересный и неочевидный вопрос).</li>
+<li>Бо́льшую часть времени бо́льшая часть компаний на рынке оценена справедливо. Т.е. ожидаемая долгосрочная доходность по всем бумагам, с поправкой на риск, одинакова (про размер доходности будет отдельная статья, это интересный и неочевидный вопрос).</li>
 <li>Задача портфеля — сбалансировать риск между этими компаниями, не поставив под удар эту самую среднюю долгосрочную доходность.</li>
-<li>Составить портфель только из недооценённых бумаг можно. Только это бессмысленно, если ваш капитал меньше нескольких десятков миллионов рублей: время гораздо выгоднее потратить на работу или образование, плюс вы подставляетесь под очень серьёзные психологические риски. Если ваш капитал больше — бо́́льшая часть недооценённых историй для вас недоступна (слишком маленькая ликвидность), а на остальную вам уже как-то пофиг: у такого капитала и другие задачи, и другие возможности.</li>
+<li>Составить портфель только из недооценённых бумаг можно. Только это бессмысленно, если ваш капитал меньше нескольких десятков миллионов рублей: время гораздо выгоднее потратить на работу или образование, плюс вы подставляетесь под очень серьёзные психологические риски. Если ваш капитал больше — бо́льшая часть недооценённых историй для вас недоступна (слишком маленькая ликвидность), а на остальную вам уже как-то пофиг: у такого капитала и другие задачи, и другие возможности.</li>
 <li>Самый большой риск инвестора — разочароваться в портфеле и продать бумаги на низах. Надо подбирать те инстументы, в которых вы уверены и держать которые комфортно.</li>
 <li>Лучший способ инвестирования — в дешёвый сбалансированный индекс, составленный по принципам, которые вы понимаете и разделяете. Худший — выбирать компании и их доли в портфеле исходя из собственных интуитивных соображений: это и сложно, и долго, и человеческая интуиция всегда проигрывает формальным методам.</li>
 <li>На российский рынок сбалансированных индексов нет. Нужно формировать самостоятельно.</li>
