--- a/literacy/howto.html
+++ b/literacy/howto.html
@@ -294,7 +294,7 @@ calcRetirement();
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
-                <a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a>
+                <a href="/literacy/stocks"> &lt;&lt; Акции и их смысл </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
