--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -94,7 +94,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
-                <a href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a>
+                <a href="/notes/diversification_math"> &lt;&lt; Математика диверсификации </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
