--- a/notes/index.html
+++ b/notes/index.html
@@ -72,7 +72,8 @@
 <h2 id="_2">Фондовый рынок</h2>
 <ol>
 <li><a href="/notes/marketprice">Откуда берётся рыночная цена и доходность акций</a></li>
-<li><a href="/notes/diversification_math">Математика диверсификации</a></li>
+<li><a href="/notes/diversification_math">Математика диверсификации: портфельный эффект и ребалансировка между акциями</a></li>
+<li><a href="/notes/diversification_math2">Математика диверсификации-2: доходность и риск</a></li>
 </ol>
 <h2 id="_3">Экономические этюды</h2>
 <ol>
