--- a/notes/diversification_math/index.html
+++ b/notes/diversification_math/index.html
@@ -2,7 +2,7 @@
 
 <html lang="ru">
 <head>
-    <title>Математика диверсификации</title>
+    <title>Математика диверсификации: портфельный эффект и ребалансировка между акциями</title>
     <meta charset="utf-8" />
     <link rel="canonical" href="/notes/diversification_math" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,8 +17,8 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
-        <meta property="og:article:modified_time" content="2019-12-08" />
-<meta property="og:title" content="Математика диверсификации" />
+        <meta property="og:article:modified_time" content="2019-12-15" />
+<meta property="og:title" content="Математика диверсификации: портфельный эффект и ребалансировка между акциями" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math" />
 
 
@@ -55,7 +55,7 @@
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
-            <h1>Математика диверсификации</h1>
+            <h1>Математика диверсификации: портфельный эффект и ребалансировка между акциями</h1>
             <div class="meta">
                     <p class="description">Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки</p>
             </div>
@@ -86,7 +86,7 @@
         </div>
         <aside>
                 <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math&title=Математика диверсификации&description=Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math&title=Математика диверсификации: портфельный эффект и ребалансировка между акциями&description=Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/diversification_math" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/diversification_math" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/diversification_math" target="_blank"><i class="share">&#xea93;</i></a>
@@ -109,7 +109,7 @@
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/notes/fairprice"> Справедливая цена &gt;&gt; </a>
+                <a href="/notes/diversification_math2"> Математика диверсификации-2: доходность и риск &gt;&gt; </a>
     </div>
     </div>
 </div>
