--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -121,7 +121,7 @@
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/notes/diversification_math"> Математика диверсификации &gt;&gt; </a>
+                <a href="/notes/diversification_math"> Математика диверсификации: портфельный эффект и ребалансировка между акциями &gt;&gt; </a>
     </div>
     </div>
 </div>
