--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -8,10 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
-        <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, облигации, диверсификация, ребалансировка, портфель" />
+        <meta name="description" content="Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." />
+        <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, облигации, диверсификация, ребалансировка, портфель, риск, доходность" />
 
 <meta property="og:locale" content="ru" />
 
+    <meta property="og:description" content="Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." />
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
@@ -55,6 +57,7 @@
         <header>
             <h1>Математика диверсификации-2: доходность и риск</h1>
             <div class="meta">
+                    <p class="description">Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле.</p>
             </div>
         </header>
 
@@ -90,7 +93,7 @@
         </div>
         <aside>
                 <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math2&title=Математика диверсификации-2: доходность и риск&description=None" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math2&title=Математика диверсификации-2: доходность и риск&description=Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea93;</i></a>
