--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -16,8 +16,8 @@
     <meta property="og:description" content="На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров." />
 
     <meta property="og:type" content="article" />
-        <meta property="og:article:published_time" content="2019-11-03" />
-        <meta property="og:article:modified_time" content="2019-11-19" />
+        <meta property="og:article:published_time" content="2019-12-16" />
+        <meta property="og:article:modified_time" content="2019-12-16" />
 <meta property="og:title" content="Как выбрать брокера" />
 <meta property="og:url" content="https://onfin.github.io/literacy/brokers" />
 
@@ -77,6 +77,7 @@
 <li><a href="#-_2">Открытие-брокер</a></li>
 <li><a href="#_8">Промсвязьбанк</a></li>
 <li><a href="#_9">Уралсиб</a></li>
+<li><a href="#-_3">Эволюция-регион</a></li>
 </ul>
 </li>
 <li><a href="#_10">Где почитать/спросить о брокерах</a></li>
@@ -98,7 +99,7 @@
 </ul>
 <h2 id="_3">Критерии выбора брокера</h2>
 <ol>
-<li>Надёжность. Выбираем брокера при надёжном банке. Точка.</li>
+<li>Надёжность. Выбираем брокера при надёжном банке.</li>
 <li>Удобство и стоимость ввода-вывода денег. Удобнее и дешевле всего, конечно, когда ваш брокер находится при вашем базовом банке. Но так получается не всегда. Если брокерский счёт открывается для, условно, пенсионных накоплений, то удобством и стоимостью вывода денег можно пренебречь. А вот если для текущих операций: обмена валюты на бирже, среднесрочных накоплений в ОФЗ, то это становится важным.</li>
 <li>Возможность получать дивиденды и купоны на банковский счёт (желательно накопительный с ежедневным начислением процентов). Особенно с ИИС. Компании выплачивают дивиденды нерегулярно, и в самом начале инвестиций эти суммы будут слишком незначительными, чтобы на них вновь можно было что-то купить. Поэтому удобно, когда сумма для реинвестирования копится на счёте с ежедневным начислением процентов (на остаток на брокерском счёте проценты как правило не начисляются, а покупать облигации на короткий срок невыгодно — комиссия и спред съедят всю доходность). Для ИИС это актуально ещё и потому, что (а) вывести с него деньги другим способом нельзя вообще, (б) при заведении обратно полученных с ИИС выплат их можно на общих основаниях зачесть при подаче на налоговый вычет.</li>
 <li>Удобство заключения сделок. Стандартный торговый терминал — QUIK — велик и страшен, но у ряда брокеров он — единственный способ взаимодействия (и работает только под Windows). Всё-таки крайне желательно, чтобы у брокера был личный кабинет/мобильное приложение с возможностью совершения сделок через них.</li>
@@ -158,6 +159,10 @@
 <td>Открытие счёта</td>
 <td>В личном кабинете банка</td>
 </tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатно в Сбер, в другие банки можно бесплатно стянуть с его дебетовки (в пределах лимитов на снятие наличных, но не больше 30Кр за раз)</td>
+</tr>
 </tbody>
 </table>
 <h3 id="_6">ВТБ</h3>
@@ -200,6 +205,10 @@
 <tr>
 <td>Открытие счёта</td>
 <td>В мбильном приложении банка</td>
+</tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатно в ВТБ, в другие банки можно бесплатно стянуть с его дебетовки (бесплатная на базовом тарифе).</td>
 </tr>
 </tbody>
 </table>
@@ -245,6 +254,10 @@
 <td>Открытие счёта</td>
 <td>В ЛК или приложении банка</td>
 </tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатно в Тиньков, далее бесплатно межбанком.</td>
+</tr>
 </tbody>
 </table>
 <p>Характерны <a href="https://www.banki.ru/forum/?PAGE_NAME=read&amp;FID=21&amp;TID=345531">постоянные технические проблемы</a>. Доступен ограниченный список бумаг. Бывает, что удаляют уже добавленные бумаги. Если вы их купили, пока они были доступны, продать будет проблематично.</p>
@@ -289,6 +302,10 @@
 <td>Открытие счёта</td>
 <td>В ЛК или приложении банка</td>
 </tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатный межбанк в любой банк.</td>
+</tr>
 </tbody>
 </table>
 <h3 id="-_2">Открытие-брокер</h3>
@@ -332,6 +349,10 @@
 <td>Открытие счёта</td>
 <td>На сайте с подтверждением через Госуслуги</td>
 </tr>
+<tr>
+<td>Вывод денег</td>
+<td>10 рублей за межбанк в любой банк.</td>
+</tr>
 </tbody>
 </table>
 <h3 id="_8">Промсвязьбанк</h3>
@@ -374,6 +395,10 @@
 <tr>
 <td>Открытие счёта</td>
 <td>В личном кабинете банка</td>
+</tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатно в Промсвязь, дальше все переводы платные.</td>
 </tr>
 </tbody>
 </table>
@@ -419,9 +444,61 @@
 <td>Открытие счёта</td>
 <td>В отделении банка после заявки через торговый терминал</td>
 </tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатный межбанк в любой банк.</td>
+</tr>
 </tbody>
 </table>
 <p>Нет ЛК, только терминал и брокерские отчёты в excel по почте.</p>
+<h3 id="-_3">Эволюция-регион</h3>
+<table>
+<thead>
+<tr>
+<th><div style="width:10em"></div></th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Тариф</td>
+<td>Основной</td>
+</tr>
+<tr>
+<td>Комиссия с оборота</td>
+<td>0,1%</td>
+</tr>
+<tr>
+<td>Ежемесячная</td>
+<td>100р при стоимости активов &lt; 10Кр</td>
+</tr>
+<tr>
+<td>За хранение</td>
+<td>0,1%г (!)</td>
+</tr>
+<tr>
+<td>Получение дивидендов на банк. счёт</td>
+<td>-</td>
+</tr>
+<tr>
+<td>... с ИИС</td>
+<td>-</td>
+</tr>
+<tr>
+<td>Накопительный счёт</td>
+<td>РЕПО свободного остатка &gt; 2Кр под ≈ ключевую ставку –0,74%г</td>
+</tr>
+<tr>
+<td>Открытие счёта</td>
+<td>В приложении с подтверждением через госуслуги</td>
+</tr>
+<tr>
+<td>Вывод денег</td>
+<td>Бесплатный межбанк в любой банк.</td>
+</tr>
+</tbody>
+</table>
+<p>Нет ЛК, только мобильное приложение (удобное). Независимый брокер при крупной инвестиционной группе.</p>
 </div>
 <h2 id="_10">Где почитать/спросить о брокерах</h2>
 <p><a href="https://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=21">На форуме склянок</a></p>
