--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-16" />
-        <meta property="og:article:modified_time" content="2019-12-16" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Как выбрать брокера" />
 <meta property="og:url" content="https://onfin.github.io/literacy/brokers" />
 
@@ -58,6 +58,7 @@
             <h1>Как выбрать брокера</h1>
             <div class="meta">
                     <p class="description">На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
