--- a/notes/accounting.html
+++ b/notes/accounting.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-21" />
-        <meta property="og:article:modified_time" content="2019-10-21" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Как и зачем я веду учёт личных финансов" />
 <meta property="og:url" content="https://onfin.github.io/notes/accounting" />
 
@@ -58,6 +58,7 @@
             <h1>Как и зачем я веду учёт личных финансов</h1>
             <div class="meta">
                     <p class="description">Причины (мои собственные) вести учёт личных финансов и контролировать расходы. Как это делаю я и почему.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
