--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-24" />
-        <meta property="og:article:modified_time" content="2019-11-24" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Справедливая цена" />
 <meta property="og:url" content="https://onfin.github.io/notes/fairprice" />
 
@@ -58,6 +58,7 @@
             <h1>Справедливая цена</h1>
             <div class="meta">
                     <p class="description">Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
