--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-30" />
-        <meta property="og:article:modified_time" content="2019-10-30" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Личный финансовый план — не нужен" />
 <meta property="og:url" content="https://onfin.github.io/notes/finplan" />
 
@@ -58,6 +58,7 @@
             <h1>Личный финансовый план — не нужен</h1>
             <div class="meta">
                     <p class="description">Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
