--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-17" />
-        <meta property="og:article:modified_time" content="2019-11-17" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Откуда берётся рыночная цена и доходность акций" />
 <meta property="og:url" content="https://onfin.github.io/notes/marketprice" />
 
@@ -58,6 +58,7 @@
             <h1>Откуда берётся рыночная цена и доходность акций</h1>
             <div class="meta">
                     <p class="description">Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
