--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-29" />
-        <meta property="og:article:modified_time" content="2019-10-29" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Безответственное отношение к деньгам" />
 <meta property="og:url" content="https://onfin.github.io/notes/recklessness" />
 
@@ -58,6 +58,7 @@
             <h1>Безответственное отношение к деньгам</h1>
             <div class="meta">
                     <p class="description">«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
