--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-10" />
-        <meta property="og:article:modified_time" content="2019-11-11" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/iis" />
 
@@ -58,6 +58,7 @@
             <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
             <div class="meta">
                     <p class="description">Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
