--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-08" />
-        <meta property="og:article:modified_time" content="2019-11-09" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Брокерский счёт: как рассчитываются и уплачиваются налоги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/taxes" />
 
@@ -58,6 +58,7 @@
             <h1>Брокерский счёт: как рассчитываются и уплачиваются налоги</h1>
             <div class="meta">
                     <p class="description">Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
