--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-17" />
-        <meta property="og:article:modified_time" content="2019-10-18" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Кто я и как дошёл до жизни такой" />
 <meta property="og:url" content="https://onfin.github.io/notes/aboutme" />
 
@@ -58,6 +58,7 @@
             <h1>Кто я и как дошёл до жизни такой</h1>
             <div class="meta">
                     <p class="description">Что побудило меня заниматься «инвестициями» и почему именно таким образом</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
