--- a/notes/capital.html
+++ b/notes/capital.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-22" />
-        <meta property="og:article:modified_time" content="2019-10-22" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Зачем нужен капитал" />
 <meta property="og:url" content="https://onfin.github.io/notes/capital" />
 
@@ -58,6 +58,7 @@
             <h1>Зачем нужен капитал</h1>
             <div class="meta">
                     <p class="description">Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
