--- a/notes/diversification_math/index.html
+++ b/notes/diversification_math/index.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
-        <meta property="og:article:modified_time" content="2019-12-15" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Математика диверсификации: портфельный эффект и ребалансировка между акциями" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math" />
 
@@ -58,6 +58,7 @@
             <h1>Математика диверсификации: портфельный эффект и ребалансировка между акциями</h1>
             <div class="meta">
                     <p class="description">Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
@@ -81,7 +82,9 @@
 <p>Однако, эти результаты справедливы только в случае, если успех или неуспех компаний определяется случайными факторами. Если мы будем считать, что некоторые компании лучше других способны зарабатывать прибыль, а некоторые, наоборот, только уничтожают акционерный капитал, то получим следующие результаты.</p>
 <p><img src=/notes/diversification_math/portfolio_yields_fate.svg style="width: 100%; height: 50wv" /></p>
 <p>Оптимальным вариантом становится портфель, взвешенный и пополняемый пропорционально рыночной капитализации, а ребалансировка приводит только к снижению доходности.</p>
-<p>Какой из этих вариантов лучше соответствует реальному рынку — я не знаю. Дополнительную сложность создаёт тот факт, что доходность акции на рынке определяется не только деятельностью компании, но и рыночной оценкой её будущего. Т.е. даже совсем убыточная компания может быть оценена так низко, что при своём банкротстве даст инвестору среднерыночную прибыль — от распродажи имущества. На данный момент я руководствуюсь промежуточной моделью: считаю колебания капитализаций отраслей случайными и ребалансируюсь между отраслями, но внутри отраслей ребалансировку не произвожу. Однако сложность этой модели меня утомляет и я хочу её упростить.</p>
+<p>Однако доходность акции на рынке определяется не только деятельностью компании, но и рыночной оценкой её будущего. Т.е. даже совсем убыточная компания может быть оценена так низко, что при своём банкротстве даст инвестору среднерыночную прибыль — от распродажи имущества. Учитывая это, полученный результат можно переформулировать так: на абсолютно эффективном рынке, где вся информация о деятельности компании и возможных рисках включена в цену, поэтому ожидаемые доходности всех акций одинаковы и вся разница в фактической доходности определяется случайными факторами (чей эффект вновь тут же включается в цену) — наилучшим будет равновзвешенный портфель акций; на неэффективном рынке, где присутствует систематическая пере- или недооценка отдельных компаний — наилучшим будет портфель, взвешенный по капитализации.</p>
+<p>Получилось забавное противоречие с господствующими школами мысли. Ведь сторонники гипотезы эффективного рынка выступают за взвешенные по капитализации портфели, а сторонники поиска неэффективностей — как минимум — за равновзвешенные.</p>
+<p>Какой из этих вариантов лучше соответствует реальному рынку — я не знаю. На данный момент я руководствуюсь промежуточной моделью: считаю колебания капитализаций отраслей случайными и ребалансируюсь между отраслями, но внутри отраслей ребалансировку не произвожу. Однако сложность этой модели меня утомляет и я хочу её упростить.</p>
 <p>Исходники моделей: <a href="/notes/diversification_math/vol.py">рынок</a>, <a href="/notes/diversification_math/vol2.py">довложения и ребалансировка</a>.</p>
         </div>
         <aside>
