--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
-        <meta property="og:article:modified_time" content="2019-12-15" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Математика диверсификации-2: доходность и риск" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math2" />
 
@@ -58,6 +58,7 @@
             <h1>Математика диверсификации-2: доходность и риск</h1>
             <div class="meta">
                     <p class="description">Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
