--- a/notes/lifeprofile.html
+++ b/notes/lifeprofile.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-21" />
-        <meta property="og:article:modified_time" content="2019-11-22" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Финансовый профиль жизни обычного человека и инвестора" />
 <meta property="og:url" content="https://onfin.github.io/notes/lifeprofile" />
 
@@ -58,6 +58,7 @@
             <h1>Финансовый профиль жизни обычного человека и инвестора</h1>
             <div class="meta">
                     <p class="description">Как будут изменяться в течение жизни доходы, расходы и капитал если делать сбережения и если их не делать.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
