--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-11" />
-        <meta property="og:article:modified_time" content="2019-11-27" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Мой портфель ценных бумаг и стратегия использования брокерских счетов" />
 <meta property="og:url" content="https://onfin.github.io/notes/myportfolio" />
 
@@ -58,6 +58,7 @@
             <h1>Мой портфель ценных бумаг и стратегия использования брокерских счетов</h1>
             <div class="meta">
                     <p class="description">По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
