--- a/notes/referrals.html
+++ b/notes/referrals.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-18" />
-        <meta property="og:article:modified_time" content="2019-10-18" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Реферальные ссылки" />
 <meta property="og:url" content="https://onfin.github.io/notes/referrals" />
 
@@ -58,6 +58,7 @@
             <h1>Реферальные ссылки</h1>
             <div class="meta">
                     <p class="description">Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
