--- a/notes/system.html
+++ b/notes/system.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-18" />
-        <meta property="og:article:modified_time" content="2019-10-21" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Как организованы мои финансы" />
 <meta property="og:url" content="https://onfin.github.io/notes/system" />
 
@@ -58,6 +58,7 @@
             <h1>Как организованы мои финансы</h1>
             <div class="meta">
                     <p class="description">Схема денежных потоков, используемые банки, карты, брокеры и сервисы, реферальные ссылки</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
