--- a/notes/workersfactories.html
+++ b/notes/workersfactories.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-24" />
-        <meta property="og:article:modified_time" content="2019-11-24" />
+        <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Фабрики — рабочим" />
 <meta property="og:url" content="https://onfin.github.io/notes/workersfactories" />
 
@@ -58,6 +58,7 @@
             <h1>Фабрики — рабочим</h1>
             <div class="meta">
                     <p class="description">Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели.</p>
+                        <p> Обновлено: <time>2019-12-29</time> </p>
             </div>
         </header>
 
