cash, deposits2, bonds

--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-19" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2020-01-02" />
 <meta property="og:title" content="Размещение средств в банках" />
 <meta property="og:url" content="https://onfin.github.io/literacy/deposits" />
 
@@ -71,7 +71,7 @@
             <h1>Размещение средств в банках</h1>
             <div class="meta">
                     <p class="description">Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов.</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                        <p> Обновлено: <time>2020-01-02</time> </p>
             </div>
         </header>
 
@@ -83,6 +83,7 @@
 <li><a href="#_2">Накопительные счета</a></li>
 <li><a href="#_3">Банковские вклады</a></li>
 <li><a href="#_4">Дебетовые карты</a></li>
+<li><a href="#_5">Проверка надёжности банка</a></li>
 </ul>
 </div>
 <h2 id="_1">Текущие банковские счета</h2>
@@ -133,6 +134,8 @@
 <h2 id="_4">Дебетовые карты</h2>
 <p>С практической точки зрения, дебетовая карта это аналог накопительного счёта, деньгами с которого можно сразу расплачиваться в торговых точках, и все рогатки накопительных счетов к ним применимы (а также и несколько собственных, описанных в статье о <a href="/literacy/moneytransfer#cards">денежных переводах</a>).</p>
 <p>Некоторые банки на остаток по своим дебетовкам начисляют весьма высокие проценты (иногда даже не выдвигая дополнительных требований, или делая их несущественными). Такие карты называют <em>доходными</em>, ими вполне можно пользоваться как обычным накопительным счётом, но для этого нужно снизить доступные лимиты на операции по карте до уровня текущих расходов (если они будут совершаться с этой карты).</p>
+<h2 id="_5">Проверка надёжности банка</h2>
+<p>Я смотрю аналитические отчёты по банкам на этих сервисах: <a href="http://kuap.ru/">Куап</a> — подробная финансовая отчётность и здоровье банков, <a href="http://www.analizbankov.ru/">Анализ банков</a> — то же, но есть аналитические отчёты по банкам на понятном простом обывателю языке <a href="http://www.analizbankov.ru/bank.php?BankId=tin-koff-bank-2673&amp;BankMenu=nadezhnost">например, Тиньков</a>.</p>
         </div>
         <aside>
                 <div class="share-buttons">
