--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -188,6 +188,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/instruments/cash"> Наличные деньги &gt;&gt; </a>
     </div>
     </div>
 </div>
