--- a/literacy/index.html
+++ b/literacy/index.html
@@ -86,6 +86,12 @@
 <li><a href="/literacy/taxes">Брокерский счёт: как рассчитываются и уплачиваются налоги</a></li>
 <li><a href="/literacy/iis">Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</a></li>
 </ol>
+<h2 id="_4">Инструменты сбережения подробно</h2>
+<ol>
+<li><a href="/literacy/instruments/cash">Наличные деньги</a></li>
+<li><a href="/literacy/instruments/deposits2">Банковские счета, карты и вклады</a></li>
+<li><a href="/literacy/instruments/bonds">Облигации</a></li>
+</ol>
         </div>
         <aside>
                 <div class="share-buttons">
